2004-12-23  John Sullivan  <john@wjsullivan.net>

	* README (Keywords): Added description of tag suggesting.

	* delicious.el (delicious-read-url): Moved duplicate checking so
	that it occurs immediately after the URL prompt. 
	(delicious-duplicate-url-p): Changed behavior to throw error if
	duplicate is not desired.
	(delicious-post): Removed duplicate checking from this stage.
	(delicious-suggest-tags): Function which suggests tags to use
	above the prompt. Currently, suggestions are just based on overlap
	between words in the buffer and words in your tags list.
	(delicious-buffer-words): Function which breaks the buffer into a
	list of unique words. Used to suggest tags.
	(delicious-complete-tags): Added line to suggest tags above the prompt.

2004-12-22  John Sullivan  <john@wjsullivan.net>

	* README (Keywords): Added note about required fields.

	* delicious.el: Made fixes to pass M-x checkdoc.
	(delicious-read-url): Added check to make sure that something is
	actually entered, because URL is a required field.
	(delicious-read-description): Added check to make sure that
	something is actually entered, because DESCRIPTION is a required field.

	* delicioapi.el: Made fixes to pass M-x checkdoc.

2004-12-20  John Sullivan  <john@wjsullivan.net>

	* README (Version): Added date to version line.
	(Keywords): Corrected error in description of guessing order.
	(Keywords): Added description of 'delicious-guess-url' change.

	* delicious.el (delicious-guess-url): Switched to a better
	matching mechanism for detecting urls. Also added buffer checking,
	as a third guessing effort. If there is a url in the buffer, the
	first url will be inserted as the suggestion.

2004-12-12  John Sullivan  <john@wjsullivan.net>

	* README: Edited `Getting started' section in light of existence
	of Customization group.

	* delicioapi.el (delicious-api-version): Changed to defconst.
	(delicious): Created a delicious customization group and moved the
	appropriate user options into it.
